<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.setu.recipe.activities.RecipeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loungeBlue"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout2"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <ImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/recipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_recipeTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_recipeDescription"
                    android:inputType="textMultiLine"
                    android:maxLength="25"
                    android:lines="2"
                    android:maxLines="2"
                    android:minLines="2"
                    android:gravity="top|start"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
                <!--android:layout_height="wrap_content" <!- Height determined by content -->
                <!--android:layout_width="match_parent" <!- Fill entire width -->
                <!--android:scrollbars="vertical" <!- Vertical Scroll Bar -->

                <EditText
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="top|start"
                    android:hint="@string/hint_recipeInstructions"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="14sp"
                    android:maxLength="500"
                    android:maxLines="6"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:textColor="@color/colorPrimaryDark" />

                <include
                    android:id="@+id/addIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/card_ingredient"
                    />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRecipe"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/deleteRed"
                    android:drawableLeft="@android:drawable/ic_menu_delete"
                    android:gravity="center"
                    android:padding="10dp"
                    android:stateListAnimator="@null"
                    android:text="Delete"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
